--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.7.2",
     "base-64": "^1.0.0",
     "chance": "^1.1.12",
     "date-fns": "^4.1.0",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "metro": "0.79.1",
@@ -63,7 +65,6 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.8.1",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.10.1",
     "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "~3.27.0",
@@ -71,6 +72,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.12.0",
+    "react-redux": "^9.2.0",
     "uuid": "^10.0.0",
     "victory-native": "^37.1.1",
     "yup": "^1.4.0"
