--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-native-screens": "~3.27.0",
     "react-native-svg": "^12.5.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.12.0",
     "react-redux": "^9.2.0",
