App Upgraded to API level 35

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -43,3 +43,6 @@ hermesEnabled=true
 # Java and Android SDK configurations
 org.gradle.java.home=/opt/homebrew/Cellar/openjdk@17/17.0.15/libexec/openjdk.jdk/Contents/Home
 android.sdk.path=/Users/ajaykolekar/Library/Android/sdk
+
+# Suppress unsupported compileSdk warning for API level 35
+android.suppressUnsupportedCompileSdk=35
