--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -40,9 +40,11 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
-# Java and Android SDK configurations
-org.gradle.java.home=/opt/homebrew/Cellar/openjdk@17/17.0.15/libexec/openjdk.jdk/Contents/Home
-android.sdk.path=/Users/ajaykolekar/Library/Android/sdk
+# It is strongly recommended to configure your Java and Android SDK paths
+# using environment variables (JAVA_HOME and ANDROID_HOME).
+# The lines below were pointing to a macOS-specific path and have been commented out.
+# org.gradle.java.home=/opt/homebrew/Cellar/openjdk@17/17.0.15/libexec/openjdk.jdk/Contents/Home
+# android.sdk.path=/Users/ajaykolekar/Library/Android/sdk
 
 # Suppress unsupported compileSdk warning for API level 35
 android.suppressUnsupportedCompileSdk=35
