--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "@sentry/react-native": "^6.1.0",
     "axios": "^1.7.2",
     "base-64": "^1.0.0",
     "chance": "^1.1.12",
@@ -62,12 +63,12 @@
     "react-native-auth0": "^4.6.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-config": "^1.5.3",
-    "@sentry/react-native": "^6.1.0",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "2.14.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-charts": "^1.4.32",
+    "react-native-keychain": "^10.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.8.1",
     "react-native-paper": "^5.12.5",
@@ -97,10 +98,10 @@
     "@types/base-64": "^1.0.2",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
+    "husky": "^9.1.7",
     "jest": "^29.6.3",
     "metro-react-native-babel-preset": "^0.77.0",
     "react-native-svg-transformer": "^1.5.0",
-    "react-test-renderer": "18.2.0",
-    "husky": "^9.1.7"
+    "react-test-renderer": "18.2.0"
   }
 }
