--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "esnext",
-    "lib": ["es2017", "es6"],
+    "lib": ["es2017", "es6","DOM"],
     "allowJs": true,
     "jsx": "react-jsx",
     "noEmit": true,
