--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@react-native/babel-preset": "^0.73.18",
     "@types/base-64": "^1.0.2",
     "@types/jest": "^30.0.0",
+    "@types/prop-types": "^15.7.15",
     "@types/react": "^19.1.9",
     "@types/react-native": "^0.72.8",
     "babel-jest": "^29.6.3",
